Wed Jan 11 11:43:42 2006  Ossama Othman <ossama@dre.vanderbilt.edu>

        From Richard Ward <richard_ward at symantec dot com>
        * ace/Auto_Ptr.h (ACE_AUTO_PTR_RESET):

          Assign "NEWPTR" macro argument to a temporary "TYPE" pointer,
          and use that pointer in place of "NEWPTR" to force "NEWPTR" to
          be expanded only once.  Prevents a memory leak from occuring
          when "NEWPTR" is an expression such as "new foo".

          Delete the object released from the auto_ptr<>.  Previously it
          was ignored, resulting in a memory leak.  Fixes a memory leak.

        * THANKS:

          Added Richard to the Hall of Fame.

Wed Jan 11 18:58:15 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * ace/Assert.cpp:
        * ace/Assert.h:

          Added const qualifier to __ace_assert() "expression" parameter.

Wed Jan 11 17:36:44 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * ace/Assert.h:

          Use ACE_VERSIONED_NAMESPACE_NAME prefix for __ace_assert()
          invocation.

Wed Jan 11 14:24:20 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * Makefile.am:

          Updated.

        * ace/ace.mpc:
        * ace/ace_for_tao.mpc:

          Added Assert.cpp to Source_Files section.

        * ace/Global_Macros.h:

          Changed to #include "ace/Assert.h", as the ACE_FACTORY_DEFINE
          macro uses ACE_ASSERT.

        * ace/Log_Msg.h:

          Changed to #include "ace/Assert.h" for backwards compatibilty
          with earlier ACE releases.

        * ace/Assert.cpp:
        * ace/Assert.h:

          Factor ACE_ASSERT() macro out of Log_Msg.h into new files
          Assert.h, with a helper-function in Assert.cpp.  This reduces
          the footprint of an ACE_ASSERT() invocation to a single call.

Wed Jan 11 13:14:52 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * include/makeinclude/rules.local.GNU:
