@@ -76,6 +76,7 @@ ACE_Hash<unsigned char>::operator () (unsigned char t) const
   return t;
 }
 
+#if 0
 ACE_INLINE unsigned long
 ACE_Hash<ACE_INT16>::operator () (ACE_INT16 t) const
 {
@@ -109,16 +110,59 @@ ACE_Hash<ACE_UINT64>::operator () (ACE_UINT64 t) const
   return static_cast<unsigned long> (t);
 #endif /* ACE_SIZEOF_LONG */
 }
+#endif
+
+ACE_INLINE unsigned long
+ACE_Hash<short>::operator () (short t) const
+{
+  return static_cast<unsigned long> (t);
+}
+
+ACE_INLINE unsigned long
+ACE_Hash<unsigned short>::operator () (unsigned short t) const
+{
+  return static_cast<unsigned long> (t);
+}
+
+ACE_INLINE unsigned long
+ACE_Hash<int>::operator () (int t) const
+{
+  return static_cast<unsigned long> (t);
+}
+
+ACE_INLINE unsigned long
+ACE_Hash<unsigned int>::operator () (unsigned int t) const
+{
+  return static_cast<unsigned long> (t);
+}
+
+ACE_INLINE unsigned long
+ACE_Hash<long>::operator () (long t) const
+{
+  return static_cast<unsigned long> (t);
+}
 
 ACE_INLINE unsigned long
 ACE_Hash<unsigned long>::operator () (unsigned long t) const
 {
-#if (ACE_SIZEOF_LONG == 4)
-  return ACE_U64_TO_U32 (t);
-#else
   return t;
-#endif /* ACE_SIZEOF_LONG */
 }
+
+#if !defined (ACE_LACKS_LONGLONG_T)
+ACE_INLINE unsigned long
+ACE_Hash<long long>::operator () (long long t) const
+{
+  return static_cast<unsigned long> (t);
+}
+#endif /* !ACE_LACKS_LONGLONG_T */
+
+#if !defined (ACE_LACKS_UNSIGNEDLONGLONG_T)
+ACE_INLINE unsigned long
+ACE_Hash<unsigned long long>::operator () (unsigned long long t) const
+{
+  return static_cast<unsigned long> (t);
+}
+#endif /* !ACE_LACKS_UNSIGNEDLONGLONG_T */
 
 ACE_INLINE unsigned long
 ACE_Hash<const char *>::operator () (const char *t) const
