@@ -1,3 +1,14 @@
+Wed Jan 11 21:19:21 UTC 2006  Steve Huston  <shuston@riverace.com>
+
+        * ace/Functor.{h inl}: Remove the ACE_* type specializations and
+          add specializations for ACE_Hash for [unsigned] short,
+          [unsigned] int, [unsigned] long, [unsigned] long long. This
+          should resolve the compile errors on some platforms resulting
+          from the changes in:
+          Tue Jan 10 23:04:06 UTC 2006  Steve Huston  <shuston@riverace.com>
+          and still allow everything to work regardless of what integral types
+          are used.
+
 Wed Jan 11 11:43:42 2006  Ossama Othman <ossama@dre.vanderbilt.edu>
 
         From Richard Ward <richard_ward at symantec dot com>
